// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands constraints query test (empty project / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-988eec'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (empty project / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-988eec'
➤ YN0000: WorkspaceName = 'workspace-a-01beb5'
➤ YN0000: WorkspaceName = 'workspace-b-d95f30'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (multiple workspaces / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-988eec'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (one regular dependency / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-988eec'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two development dependencies / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-988eec'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / combined predicates) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = dependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: ┌ DependencyType  = devDependencies
➤ YN0000: │ DependencIdent  = 'no-deps-bin'
➤ YN0000: └ DependencyRange = '1.0.0'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / custom predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / single predicate with ignored variable) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: WorkspaceName = 'root-workspace-988eec'
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test (two regular dependencies, two development dependencies / single predicate) 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: DependencyType = dependencies
➤ YN0000: DependencyType = devDependencies
➤ YN0000: DependencyType = peerDependencies
➤ YN0000: Done
",
}
`;

exports[`Commands constraints query test without trailing . 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Done
",
}
`;
